Add configurable login background and adopt AGPL-3.0
